--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,13 +13,30 @@
             "justMyCode": true,
             "env": {
                 "CUDA_VISIBLE_DEVICES":"0",
-                "CKPT_PATH":"/home/avi/ckpoints/hyena_small_150b_tok.ckpt",
-                "DATA_DIR":"/home/avi/data"
+                "CKPT_PATH":"/home/avi/ckpoints/hyena/hyena_small_150b_tok.ckpt",
+                "DATA_DIR":"/home/avi/data/code/python/final/jsonl"
             },
             "args": [
-                "--ckpt_path", "/home/avi/ckpoints/hyena_small_150b_tok.ckpt",
-                "--data_dir", "/home/avi/data"
+                "--ckpt_path", "/home/avi/ckpoints/hyena/hyena_small_150b_tok.ckpt",
+                "--data_dir", "/home/avi/data/code/python/final/jsonl"
             ]
-        }
+        },
+        {
+            "name": "Python: Lambda Module",
+            "type": "python",
+            "request": "launch",
+            "program": "/home/avi/git_repos/safari_local/evals/lambada.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "env": {
+                "CUDA_VISIBLE_DEVICES":"0",
+                "CKPT_PATH":"/home/avi/ckpoints/hyena/hyena_small_150b_tok.ckpt",
+                "DATA_DIR":"/home/avi/data/code/python/final/jsonl"
+            },
+            "args": [
+                "--ckpt_path", "/home/avi/ckpoints/hyena/hyena_small_150b_tok.ckpt",
+                "--data_dir", "/home/avi/data/code/python/final/jsonl"
+            ]
+        }        
     ]
 }
