--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,8 +44,24 @@
             "request": "launch",
             "program": "/home/avi/git_repos/safari_local/train.py",
             "console": "integratedTerminal",
-            "justMyCode": true,
+            "justMyCode": true,  
+            "args": ["experiment=cifar/long-conv-cifar"],
             "env": {"WANDB_API_KEY":"a4bb1084037cb9f74037c9f528cdb03ff074550a"}
         },
+       {
+            "name": "Python: train pile 5B",
+            "type": "python",
+            "request": "launch",
+            "program": "/home/avi/git_repos/safari_local/train.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,  
+            "args": ["experiment=pile/hyena-150b-tokens",
+                    "trainer.max_steps=10000",
+                    "scheduler.t_initial=10000",
+                    "trainer.devices=1"
+                    ],
+            "env": {"WANDB_API_KEY":"a4bb1084037cb9f74037c9f528cdb03ff074550a",
+                    "DATA_PATH":"/home/avi/git_repos/safari_local/data/pile/the_pile.py"}
+        }
     ]
 }
