--- a/configs/dataset/thepile.yaml
+++ b/configs/dataset/thepile.yaml
@@ -1,5 +1,5 @@
 _name_: the_pile
-dataset_name: the_pile
+dataset_name: '/home/avi/git_repos/safari_local/data/pile/00.jsonl'
 dataset_config_name: null
 tokenizer_name: gpt2
 cache_dir: ${oc.env:DATA_PATH}/the_pile/cache
@@ -7,7 +7,7 @@ max_length: 2048
 add_eos: True
 batch_size: 4  # per GPU
 batch_size_eval: ${eval:${.batch_size} * 2}
-num_workers: 64  # For preprocessing only
+num_workers: 18  # For preprocessing only
 use_shmem: False
 shuffle: True
 pin_memory: True
