--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,15 +55,15 @@
             "request": "launch",
             "program": "/home/avi_keinan_a_k/git_repos/safari_local/train.py",
             "console": "integratedTerminal",
-            "justMyCode": false,  
+            "justMyCode": true,  
             "args": ["experiment=pile/hyena-150b-tokens",
-                    //"trainer.max_steps=20000",
+                    //"trainer.max_steps=200",
                     //"scheduler.t_initial=10000",
                     "trainer.devices=1",
                     "model.layer.fused_fft_conv=False",
                     "dataset.batch_size=7",
                     "model.use_code_data=True",
-                    "trainer.max_epochs=2"
+                    "trainer.max_epochs=100"
                     //"dataset.max_length=1024"
                     ],
             "env": {"WANDB_API_KEY":"a4bb1084037cb9f74037c9f528cdb03ff074550a",
