--- a/configs/experiment/pile/hyena.yaml
+++ b/configs/experiment/pile/hyena.yaml
@@ -11,7 +11,8 @@ model:
   vocab_size: 50257
   resid_dropout: 0.0
   embed_dropout: 0.1
-  use_code_data: False  
+  use_code_data: False
+  use_lora: True
   layer:
     _name_: hyena
     emb_dim: 33 
@@ -23,6 +24,7 @@ model:
     w: 14
     lr: ${optimizer.lr}
     lr_pos_emb: ${optimizer.lr}
+    use_lora: True
   fused_mlp: True
   fused_dropout_add_ln: True
   residual_in_fp32: True
